Conexion con la base de datos y arreglo de Hotspots Reviewed

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-spring.application.name=GP
+database.host=localhost
+database.port=5432
+database.name=DOO
+database.user=postgres
+database.password=000
